--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <header class="page-header">
      <div class="container">
-      Звоните на мой личный телефон +7 952 555 8501
+      <a class="header-email" href="mailto:alvares12301@gmail.com">alvares12301@gmail.com</a>
+         <a class="header-phone" href="tel:+79525558501">+7 952 555 85 01</a>
       </div>
     </header>
 
@@ -22,6 +23,9 @@
 
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+          <img src="files/user.jpg" width="928" height="536" alt="Фотография неопознанного енота">
+      </figure>
       <div class="container">
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
@@ -32,9 +36,13 @@
 
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
+      <figure class="project-image">
+          <img src="files/project.jpg" width="928" height="536" alt="Сайт инструктора кекса">
+      </figure>
        <div class="container">
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
+       <a class="button" href="source/project/index.html">Открыть страницу</a>
         </div>
           <div class="container">
       <h3>Блог начинающего верстальщика</h3>
@@ -44,7 +52,8 @@
 
     <footer class="page-footer">
      <div class="container">
-      Контакты в подвале
+       <a class="footer-email" href="mailto:alvares12301@gmail.com">alvares12301@gmail.com</a>
+        <a class="footer-phone" href="tel:+79525558501">+7 952 555 85 01</a>
         </div>
     </footer>
   </body>
